--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/balintsoos/blockchain#readme",
   "devDependencies": {
+    "@types/node": "12.7.5",
     "typescript": "3.6.3"
   }
 }
