chore(readme): update readme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockchain",
   "version": "1.0.0",
-  "description": "Blockchain implementation in Node.js",
+  "description": "Blockchain implementation in Node.js with Typescript",
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
