chore(scripts): add lint scripts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc:init": "tsc --init",
+    "lint": "eslint --ext .js,.ts .",
+    "lint:fix": "npm run lint -- --fix",
     "build": "tsc",
     "example": "npm run build && node build/example.js"
   },
